Criação da estruura do arquivo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <main>2</main>
+    <main></main>
     <section></section>
     <section></section>
     <section></section>
